feat: added listing all products